--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <p>Nama: Febriansyah</p>
             <p>Email: masfebriansyah2004@gmail.com</p>
             <p>Hobi: Balap mobil, fotografi</p>
+            <p>Inspirasi : Assetto Corsa</p>
         </aside>
         <button id="backToTop" class="back-to-top">Kembali ke Atas</button>
     </main>
