--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <p>Email: masfebriansyah2004@gmail.com</p>
             <p>Hobi: Balap mobil, fotografi</p>
             <p>Inspirasi : Assetto Corsa</p>
+            <p>Bahasa : Inggris, German</p>
         </aside>
         <button id="backToTop" class="back-to-top">Kembali ke Atas</button>
     </main>
